[FIX] Notifications overflow and timer issue

--- a/source/app/static/assets/css/atlantis.css
+++ b/source/app/static/assets/css/atlantis.css
@@ -7197,7 +7197,7 @@ body .badge-danger {
 
 .alert[data-notify] {
   min-width: 100px;
-  max-width: 250px;
+  max-width: 270px;
 }
 
 .alert.alert-success {
@@ -7241,6 +7241,11 @@ body .badge-danger {
 .alert [data-notify="message"] {
     font-size: 14px;
     color: #fff;
+}
+
+.alert [data-notify="message"] > p {
+    margin-bottom: 0px;
+    bottom: 0px;
 }
 
 .alert .close {
@@ -15610,3 +15615,5 @@ td.dt-nowrap { white-space: nowrap }
 .file-selected, .node-source-selected {
   box-shadow: 0px 0px 5px 5px rgba(168, 202, 255, 0.5),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12) !important;
 }
+
+
